iac/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dotnetkonf2021-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: api-product-service
          servicePort: 80
        path: /api/products/(.*)
      - backend:
          serviceName: api-users-service
          servicePort: 80
        path: /api/users/(.*)
      - backend:
          serviceName: web-site-service
          servicePort: 80
        path: /(.*)
